--- a/style.css
+++ b/style.css
@@ -16,6 +16,6 @@
 	--main-color-dark3: #769bb3;
 }
 
-h1{font-family: 'Montserrat', sans-serif; color: var(--green);}
+h1, h2, h3 {font-family: 'Montserrat', sans-serif; color: var(--green);}
 
 p{font-family: 'Raleway', sans-serif;}
