--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 	--main-font-tertiary: "Comfortaa", cursive;
     
 	/* Colors */
-	--green: #104528;
+	--green: #165D36;
 	--main-color-white: #e9f0f2;
 	--main-color-black: #0d0d0d;
 	--main-color-light: #5ef2ad;
