--- a/style.css
+++ b/style.css
@@ -6,14 +6,10 @@
     
 	/* Colors */
 	--green: #165D36;
-	--main-color-white: #e9f0f2;
-	--main-color-black: #0d0d0d;
-	--main-color-light: #5ef2ad;
-	--main-color-dark: #45735d;
-	--main-color-light2: #f38888;
-	--main-color-dark2: #d27575;
-	--main-color-light3: #a0d3f2;
-	--main-color-dark3: #769bb3;
+	--white: #e9f0f2;
+	--black: #0d0d0d;
+	--pink: #d27575;
+	--gray-blue: #769bb3;
 }
 
 h1, h2, h3 {font-family: 'Montserrat', sans-serif; color: var(--green);}
