--- a/style.css
+++ b/style.css
@@ -12,6 +12,6 @@
 	--gray-blue: #769bb3;
 }
 
-h1, h2, h3 {font-family: 'Montserrat', sans-serif; color: var(--green);}
+h1, h2, h3 {font-family: 'Montserrat', sans-serif; color: var(--green); text-transform: bold;}
 
 p{font-family: 'Raleway', sans-serif;}
