--- a/style.css
+++ b/style.css
@@ -17,3 +17,7 @@ h1, h2, h3 {font-family: 'Montserrat', sans-serif; color: var(--green); text-tra
 p{font-family: 'Raleway', sans-serif;}
 
 .menu{font-family: 'Montserrat', sans-serif; color: var(--gray-blue);}
+
+.center {
+  height: 200px;
+  position: relative;
