--- a/style.css
+++ b/style.css
@@ -14,10 +14,8 @@
 
 h1, h2, h3 {font-family: 'Montserrat', sans-serif; color: var(--green); text-transform: bold;}
 
-p{font-family: 'Raleway', sans-serif;}
+p{font-family: 'Raleway', sans-serif; background-color: var(--gray-blue);}
 
 .menu{font-family: 'Montserrat', sans-serif; color: var(--gray-blue);}
 
-.center {
-  height: 200px;
-  position: relative;
+.center {height: 200px; position: relative;}
