--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 h1, h2, h3 {font-family: 'Montserrat', sans-serif; color: var(--green); text-transform: bold;}
 
-p{font-family: 'Raleway', sans-serif; background-color: var(--gray-blue);}
+p{font-family: 'Raleway', sans-serif;}
 
 .menu{font-family: 'Montserrat', sans-serif; color: var(--gray-blue);}
 
