--- a/style.css
+++ b/style.css
@@ -25,4 +25,4 @@ p{font-family: 'Raleway', sans-serif;}
 
 .title{font-family: 'Montserrat', sans-serif; color: var(--green);}
 
-div{background-color: var(--light-gray);}
+#menu{background-color: var(--light-gray);}
