--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@
 	--light-gray: #C9D6DD;
 }
 
-h1{font-family: 'Montserrat', sans-serif; color: var(--green); text-transform: bold;}
+h1, h2{font-family: 'Montserrat', sans-serif; color: var(--green); text-transform: bold;}
 
-h3{font-family: 'Montserrat', sans-serif; color: var(--gray-blue); text-transform: bold; margin-right: 150px; margin-left: 150px;}
+h3{font-family: 'Montserrat', sans-serif; color: var(--gray-blue); text-transform: bold; margin-right: 100px; margin-left: 100px;}
 
 p{font-family: 'Raleway', sans-serif;
-  margin-right: 150px;
-  margin-left: 150px;}
+  margin-right: 100px;
+  margin-left: 100px;}
 
 .menu{font-family: 'Montserrat', sans-serif; color: var(--green); background-color: var(--light-gray);}
 
@@ -27,6 +27,6 @@ p{font-family: 'Raleway', sans-serif;
 
 .title{font-family: 'Montserrat', sans-serif; color: var(--green);}
 
-.job{font-family: 'Montserrat', sans-serif; color: var(--green); width: 300px; height: 300px; padding: 50px; border: 20px solid var(--green);}
+.job{font-family: 'Montserrat', sans-serif; color: var(--green); width: 320px; height: 320px; padding: 30px; border: 10px solid var(--green); align-items: center}
 
-#menu{font-family: 'Montserrat', sans-serif; color: var(--green); background-color: var(--light-gray);}
+#menu{font-family: 'Montserrat', sans-serif; background-color: var(--light-gray); color: var(--green);}
