--- a/style.css
+++ b/style.css
@@ -29,3 +29,4 @@ p{font-family: 'Raleway', sans-serif;
 
 #menu{font-family: 'Montserrat', sans-serif; background-color: var(--light-gray); color: var(--green); }
 
+.picture{height="320" width="auto" border: 10px solid var(--green);}
