--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 h1, h2{font-family: 'Montserrat', sans-serif; color: var(--green); text-transform: bold; margin-right: 150px; margin-left: 150px;}
 
-h3{font-family: 'Montserrat', sans-serif; color: var(--gray-blue); text-transform: bold; margin-right: 150px; margin-left: 150px;}
+h3{font-family: 'Montserrat', sans-serif; color: var(--gray-blue); text-transform: bold;}
 
 p{font-family: 'Raleway', sans-serif;
   margin-right: 150px;
@@ -28,3 +28,32 @@ p{font-family: 'Raleway', sans-serif;
 .job{font-family: 'Montserrat', sans-serif; color: var(--green); width: 400px; height: 400px; padding: 30px; border: 10px solid var(--green); }
 
 #menu{font-family: 'Montserrat', sans-serif; background-color: var(--light-gray); color: var(--green); }
+
+.form{font-family: 'Montserrat', sans-serif; font-size: 17px; color: var(--green); margin-right: 90px; margin-left: 90px;}
+
+th, td {padding: 3px}
+
+input[type=submit] {
+  background-color: var(--gray-blue);
+  color: white;
+  padding: 4px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;}
+
+input[type=submit]:hover {background-color: var(--green);}
+
+nav ul {list-style: none; text-align: center;}
+
+nav ul li {display: inline-block;}
+
+nav ul li a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: var(--green);
+  font-weight: 800;
+  text-transform: uppercase;
+  margin: 0 10px;}
+
+nav ul li a:hover {color: var(--green);}
