--- a/style.css
+++ b/style.css
@@ -13,19 +13,15 @@
 	--light-gray: #C9D6DD;
 }
 
-h1, h2{font-family: 'Montserrat', sans-serif; color: var(--green); text-transform: bold; margin-right: 150px; margin-left: 150px;}
+h1, h2{font-family: 'Montserrat', sans-serif; color: var(--green); text-transform: bold;}
 
 h3{font-family: 'Montserrat', sans-serif; color: var(--gray-blue); text-transform: bold;}
 
-p{font-family: 'Raleway', sans-serif;
-  margin-right: 150px;
-  margin-left: 150px;}
-
-.menu{font-family: 'Montserrat', sans-serif; color: var(--green); background-color: var(--light-gray);}
+p{font-family: 'Raleway', sans-serif;}
 
 .title{font-family: 'Montserrat', sans-serif; color: var(--green);}
 
-.job{font-family: 'Montserrat', sans-serif; color: var(--green); width: 400px; height: 400px; padding: 30px; border: 10px solid var(--green); }
+.job{font-family: 'Montserrat', sans-serif; color: var(--white); width: 500px; height: 600px; padding: 30px; border: 10px solid var(--green); font-size: 50px}
 
 #menu{font-family: 'Montserrat', sans-serif; background-color: var(--light-gray); color: var(--green); }
 
