--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ p{font-family: 'Raleway', sans-serif;}
 
 th, td {padding: 3px; font-family: 'Montserrat', sans-serif; color: var(--green);}
 
+#headshot{float: right}
+
 input[type=submit] {
   background-color: var(--gray-blue);
   color: white;
